# bevy_training

./: .gitignore  Cargo.toml
assets/shaders/: animate_shader.wgsl  automatic_instancing.wgsl  circle_mask.wgsl  mask2d.wgsl  oklab_animate_shader.wgsl  scratch_card.wgsl  scratch_update.wgsl
examples/: automatic_instancing.rs  layout_demo.rs  mask_2d.rs  oklab_animate_shader.rs  scratch_card.rs  texture_atlas.rs
src/: main.rs  mask_2d.rs  mymask.rs  scratch_card.rs
