[package]
name = "mask_2d"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = "0.16.1"


[[example]]
name = "mask_2d"
path = "examples/mask_2d.rs"

[package.metadata.example.mask_2d]
name = "Mask 2D Example"
description = "An example demonstrating the use of 2D masks in Bevy."
category = "2D Rendering"
wasm = true

[[example]]
name = "oklab_animate_shader"
path = "examples/oklab_animate_shader.rs"

[package.metadata.example.oklab_animate_shader]
name = "Oklab Animate Shader Example"
description = "An example demonstrating the use of Oklab color space in shader animations."
category = "Shader Animation"
wasm = true

[[example]]
name = "scratch_card"
path = "examples/scratch_card.rs"

[package.metadata.example.scratch_card]
name = "Scratch Card Example"
description = "A scratch card demo using CPU-based mask updates."
category = "2D Rendering"
wasm = true


